--- a/css/style.css
+++ b/css/style.css
@@ -3821,14 +3821,14 @@ header {
 .blog-single-div {
     background-color: #f9f7ff;
     width: calc(1920 / 1920 * 100vw);
-    height: calc(14392 / 1080 * 100vh);
+    height: auto;
     position: relative;
+    padding-bottom: calc(504 / 1080 * 100vh);
 }
 
 .blog-single-text-wrapper {
-    position: absolute;
-    top: calc(13373 / 1080 * 100vh);
-    left: calc(84 / 1920 * 100vw);
+    position: relative;
+    left: calc(21 / 1920 * 100vw);
     font-family: "Gordita-Regular", Helvetica;
     font-weight: 400;
     color: var(--brand-colorsecondary);
@@ -3840,12 +3840,21 @@ header {
 }
 
 .blog-single-row {
-    display: inline-flex;
+    display: flex;
+    flex-direction: column;
     align-items: flex-start;
-    gap: calc(38 / 1920 * 100vw);
-    position: absolute;
-    top: calc(13473 / 1080 * 100vh);
+    gap: calc(59 / 1920 * 100vw);
+    position: relative;
+    top: calc(336 / 1080 * 100vh);
     left: calc(64 / 1920 * 100vw);
+}
+
+.blog-single-post-card-container {
+    position: relative;
+    left: calc(21 / 1920 * 100vw);
+    display: flex;
+    flex-direction: row;
+    gap: calc(20 / 1920 * 100vw);
 }
 
 .blog-single-post-card {
@@ -3983,7 +3992,7 @@ header {
 }
 
 .blog-single-overlap {
-    position: absolute;
+    position: relative;
     width: calc(1812 / 1920 * 100vw);
     height: calc(795 / 1080 * 100vh);
     top: calc(2 / 1080 * 100vh);
@@ -4079,12 +4088,17 @@ header {
     object-fit: cover;
 }
 
+.blog-content-container {
+    position: relative;
+    top: calc(173 / 1080 * 100vh);
+    left: calc(800 / 1920 * 100vw);
+    display: flex;
+    flex-direction: column;
+}
 
 .blog-single-effectiveness-of {
-    position: absolute;
-    width: calc(861 / 1920 * 100vw);
-    top: calc(8931 / 1080 * 100vh);
-    left: calc(840 / 1920 * 100vw);
+    margin: calc(34 / 1080 * 100vh) 0 calc(108 / 1080 * 100vh) 0;
+    width: calc(988 / 1920 * 100vw);
     font-family: "PP Neue Montreal-Medium", Helvetica;
     font-weight: 500;
     color: transparent;
@@ -4095,7 +4109,7 @@ header {
 
 .blog-single-span {
     color: #152d5a;
-    font-size: calc(24 / 1920 * 100vw);
+    font-size: calc(27 / 1920 * 100vw);
     font-style: normal;
     font-weight: 500;
     line-height: calc(32 / 1080 * 100vh);
@@ -4103,7 +4117,7 @@ header {
 
 .blog-single-text-wrapper-10 {
     color: #707c92;
-    font-size: calc(20 / 1920 * 100vw);
+    font-size: calc(24 / 1920 * 100vw);
 }
 
 .blog-single-text-wrapper-11 {
@@ -4111,62 +4125,51 @@ header {
 }
 
 .blog-single-clear-aligners-and {
-    position: absolute;
-    width: calc(810 / 1920 * 100vw);
-    top: calc(1140 / 1080 * 100vh);
-    left: calc(841 / 1920 * 100vw);
+    margin: calc(34 / 1080 * 100vh) 0 calc(108 / 1080 * 100vh) 0;
+    width: calc(988 / 1920 * 100vw);
     font-family: "PP Neue Montreal-Medium", Helvetica;
     font-weight: 500;
     color: var(--paragraph-gray);
-    font-size: calc(20 / 1920 * 100vw);
+    font-size: calc(24 / 1920 * 100vw);
     letter-spacing: 0;
     line-height: calc(32 / 1080 * 100vh);
 }
 
 .blog-single-here-is-a-quick {
-    position: absolute;
-    width: calc(861 / 1920 * 100vw);
-    top: calc(1586 / 1080 * 100vh);
-    left: calc(838 / 1920 * 100vw);
+    margin: calc(34 / 1080 * 100vh) 0 calc(108 / 1080 * 100vh) 0;
+    width: calc(988 / 1920 * 100vw);
     font-family: "PP Neue Montreal-Medium", Helvetica;
     font-weight: 500;
     color: var(--paragraph-gray);
-    font-size: calc(20 / 1920 * 100vw);
+    font-size: calc(24 / 1920 * 100vw);
     letter-spacing: 0;
     line-height: calc(32 / 1080 * 100vh);
 }
 
 .blog-single-people-are {
-    position: absolute;
-    width: calc(861 / 1920 * 100vw);
-    top: calc(2576 / 1080 * 100vh);
-    left: calc(838 / 1920 * 100vw);
+    margin: calc(34 / 1080 * 100vh) 0 calc(108 / 1080 * 100vh) 0;
+    width: calc(988 / 1920 * 100vw);
     font-family: "PP Neue Montreal-Medium", Helvetica;
     font-weight: 500;
     color: var(--paragraph-gray);
-    font-size: calc(20 / 1920 * 100vw);
+    font-size: calc(24 / 1920 * 100vw);
     letter-spacing: 0;
     line-height: calc(32 / 1080 * 100vh);
 }
 
 .blog-single-brackets-brackets {
-    position: absolute;
-    width: calc(869 / 1920 * 100vw);
-    top: calc(3136 / 1080 * 100vh);
-    left: calc(838 / 1920 * 100vw);
+    margin: calc(34 / 1080 * 100vh) 0 calc(58 / 1080 * 100vh) 0;
+    width: calc(988 / 1920 * 100vw);
     font-family: "PP Neue Montreal-Medium", Helvetica;
     font-weight: 500;
     color: var(--paragraph-gray);
-    font-size: calc(20 / 1920 * 100vw);
+    font-size: calc(24 / 1920 * 100vw);
     letter-spacing: 0;
     line-height: calc(32 / 1080 * 100vh);
 }
 
 .blog-single-text-wrapper-12 {
-    position: absolute;
     width: calc(945 / 1920 * 100vw);
-    top: calc(970 / 1080 * 100vh);
-    left: calc(842 / 1920 * 100vw);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
@@ -4176,9 +4179,6 @@ header {
 }
 
 .blog-single-text-wrapper-13 {
-    position: absolute;
-    top: calc(2494 / 1080 * 100vh);
-    left: calc(836 / 1920 * 100vw);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
@@ -4189,9 +4189,6 @@ header {
 }
 
 .blog-single-text-wrapper-14 {
-    position: absolute;
-    top: calc(2972 / 1080 * 100vh);
-    left: calc(837 / 1920 * 100vw);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
@@ -4202,23 +4199,19 @@ header {
 }
 
 .blog-single-pressure-and-tension {
-    position: absolute;
-    width: calc(817 / 1920 * 100vw);
-    top: calc(3724 / 1080 * 100vh);
-    left: calc(838 / 1920 * 100vw);
+    margin: calc(34 / 1080 * 100vh) 0 calc(108 / 1080 * 100vh) 0;
+    width: calc(988 / 1920 * 100vw);
     font-family: "PP Neue Montreal-Medium", Helvetica;
     font-weight: 500;
     color: var(--paragraph-gray);
-    font-size: calc(20 / 1920 * 100vw);
+    font-size: calc(24 / 1920 * 100vw);
     letter-spacing: 0;
     line-height: calc(32 / 1080 * 100vh);
 }
 
 .blog-single-physical-discomfort {
-    position: absolute;
-    width: calc(861 / 1920 * 100vw);
-    top: calc(4458 / 1080 * 100vh);
-    left: calc(838 / 1920 * 100vw);
+    margin: calc(34 / 1080 * 100vh) 0 calc(108 / 1080 * 100vh) 0;
+    width: calc(988 / 1920 * 100vw);
     font-family: "PP Neue Montreal-Medium", Helvetica;
     font-weight: 500;
     color: transparent;
@@ -4228,61 +4221,50 @@ header {
 }
 
 .blog-single-a-modern-alternative {
-    position: absolute;
-    width: calc(861 / 1920 * 100vw);
-    top: calc(5385 / 1080 * 100vh);
-    left: calc(838 / 1920 * 100vw);
+    margin: calc(34 / 1080 * 100vh) 0;
+    width: calc(988 / 1920 * 100vw);
     font-family: "PP Neue Montreal-Medium", Helvetica;
     font-weight: 500;
     color: var(--paragraph-gray);
-    font-size: calc(20 / 1920 * 100vw);
+    font-size: calc(24 / 1920 * 100vw);
     letter-spacing: 0;
     line-height: calc(32 / 1080 * 100vh);
 }
 
 .blog-single-customized-design {
-    position: absolute;
-    width: calc(861 / 1920 * 100vw);
-    top: calc(5789 / 1080 * 100vh);
-    left: calc(841 / 1920 * 100vw);
+    margin: calc(34 / 1080 * 100vh) 0 calc(108 / 1080 * 100vh) 0;
+    width: calc(988 / 1920 * 100vw);
     font-family: "PP Neue Montreal-Medium", Helvetica;
     font-weight: 500;
     color: var(--paragraph-gray);
-    font-size: calc(20 / 1920 * 100vw);
+    font-size: calc(24 / 1920 * 100vw);
     letter-spacing: 0;
     line-height: calc(32 / 1080 * 100vh);
 }
 
 .blog-single-clear-aligners-are {
-    position: absolute;
-    width: calc(861 / 1920 * 100vw);
-    top: calc(6619 / 1080 * 100vh);
-    left: calc(842 / 1920 * 100vw);
+    margin: calc(34 / 1080 * 100vh) 0 calc(108 / 1080 * 100vh) 0;
+    width: calc(988 / 1920 * 100vw);
     font-family: "PP Neue Montreal-Medium", Helvetica;
     font-weight: 500;
     color: var(--paragraph-gray);
-    font-size: calc(20 / 1920 * 100vw);
+    font-size: calc(24 / 1920 * 100vw);
     letter-spacing: 0;
     line-height: calc(32 / 1080 * 100vh);
 }
 
 .blog-single-clear-aligners {
-    position: absolute;
-    width: calc(861 / 1920 * 100vw);
-    top: calc(7055 / 1080 * 100vh);
-    left: calc(838 / 1920 * 100vw);
+    margin: calc(34 / 1080 * 100vh) 0 calc(108 / 1080 * 100vh) 0;
+    width: calc(988 / 1920 * 100vw);
     font-family: "PP Neue Montreal-Medium", Helvetica;
     font-weight: 500;
     color: var(--paragraph-gray);
-    font-size: calc(20 / 1920 * 100vw);
+    font-size: calc(24 / 1920 * 100vw);
     letter-spacing: 0;
     line-height: calc(32 / 1080 * 100vh);
 }
 
 .blog-single-text-wrapper-15 {
-    position: absolute;
-    top: calc(6973 / 1080 * 100vh);
-    left: calc(835 / 1920 * 100vw);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
@@ -4293,9 +4275,6 @@ header {
 }
 
 .blog-single-text-wrapper-16 {
-    position: absolute;
-    top: calc(7442 / 1080 * 100vh);
-    left: calc(838 / 1920 * 100vw);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
@@ -4306,9 +4285,6 @@ header {
 }
 
 .blog-single-text-wrapper-17 {
-    position: absolute;
-    top: calc(8849 / 1080 * 100vh);
-    left: calc(840 / 1920 * 100vw);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
@@ -4319,9 +4295,6 @@ header {
 }
 
 .blog-single-text-wrapper-18 {
-    position: absolute;
-    top: calc(9864 / 1080 * 100vh);
-    left: calc(839 / 1920 * 100vw);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
@@ -4332,9 +4305,6 @@ header {
 }
 
 .blog-single-consultation {
-    position: absolute;
-    top: calc(11078 / 1080 * 100vh);
-    left: calc(839 / 1920 * 100vw);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
@@ -4345,10 +4315,8 @@ header {
 }
 
 .blog-single-misconceptions-about {
-    position: absolute;
-    width: calc(861 / 1920 * 100vw);
-    top: calc(9946 / 1080 * 100vh);
-    left: calc(839 / 1920 * 100vw);
+    margin: calc(34 / 1080 * 100vh) 0 calc(108 / 1080 * 100vh) 0;
+    width: calc(988 / 1920 * 100vw);
     font-family: "PP Neue Montreal-Medium", Helvetica;
     font-weight: 500;
     color: transparent;
@@ -4358,10 +4326,8 @@ header {
 }
 
 .blog-single-aesthetic-advantages {
-    position: absolute;
-    width: calc(835 / 1920 * 100vw);
-    top: calc(7524 / 1080 * 100vh);
-    left: calc(836 / 1920 * 100vw);
+    margin: calc(34 / 1080 * 100vh) 0 calc(108 / 1080 * 100vh) 0;
+    width: calc(988 / 1920 * 100vw);
     font-family: "undefined-Regular", Helvetica;
     font-weight: 500;
     color: #707C93;
@@ -4371,9 +4337,7 @@ header {
 }
 
 .blog-single-text-wrapper-19 {
-    position: absolute;
-    top: calc(11160 / 1080 * 100vh);
-    left: calc(838 / 1920 * 100vw);
+    margin-top: calc(34 / 1080 * 100vh);
     font-family: "PP Neue Montreal-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
@@ -4384,10 +4348,7 @@ header {
 }
 
 .blog-single-text-wrapper-20 {
-    position: absolute;
     width: calc(861 / 1920 * 100vw);
-    top: calc(11718 / 1080 * 100vh);
-    left: calc(838 / 1920 * 100vw);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
@@ -4397,23 +4358,19 @@ header {
 }
 
 .blog-single-professional {
-    position: absolute;
-    width: calc(901 / 1920 * 100vw);
-    top: calc(11226 / 1080 * 100vh);
-    left: calc(838 / 1920 * 100vw);
+    margin: calc(34 / 1080 * 100vh) 0 calc(108 / 1080 * 100vh) 0;
+    width: calc(988 / 1920 * 100vw);
     font-family: "PP Neue Montreal-Medium", Helvetica;
     font-weight: 500;
     color: var(--paragraph-gray);
-    font-size: calc(20 / 1920 * 100vw);
+    font-size: calc(24 / 1920 * 100vw);
     letter-spacing: 0;
     line-height: calc(32 / 1080 * 100vh);
 }
 
 .blog-single-visibility-and {
-    position: absolute;
-    width: calc(936 / 1920 * 100vw);
-    top: calc(11834 / 1080 * 100vh);
-    left: calc(838 / 1920 * 100vw);
+    margin: calc(34 / 1080 * 100vh) 0 calc(108 / 1080 * 100vh) 0;
+    width: calc(988 / 1920 * 100vw);
     font-family: "PP Neue Montreal-Medium", Helvetica;
     font-weight: 500;
     color: transparent;
@@ -4423,10 +4380,7 @@ header {
 }
 
 .blog-single-text-wrapper-21 {
-    position: absolute;
     width: calc(861 / 1920 * 100vw);
-    top: calc(12872 / 1080 * 100vh);
-    left: calc(838 / 1920 * 100vw);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
@@ -4436,22 +4390,18 @@ header {
 }
 
 .blog-single-ultimately-you {
-    position: absolute;
-    width: calc(861 / 1920 * 100vw);
-    top: calc(13014 / 1080 * 100vh);
-    left: calc(838 / 1920 * 100vw);
+    margin-top: calc(34 / 1080 * 100vh);
+    width: calc(988 / 1920 * 100vw);
     font-family: "PP Neue Montreal-Medium", Helvetica;
     font-weight: 500;
     color: var(--paragraph-gray);
-    font-size: calc(20 / 1920 * 100vw);
+    font-size: calc(24 / 1920 * 100vw);
     letter-spacing: 0;
     line-height: calc(32 / 1080 * 100vh);
 }
 
 .blog-single-text-wrapper-22 {
-    position: absolute;
-    top: calc(3054 / 1080 * 100vh);
-    left: calc(850 / 1920 * 100vw);
+    margin-top: calc(34 / 1080 * 100vh);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
@@ -4462,9 +4412,6 @@ header {
 }
 
 .blog-single-text-wrapper-23 {
-    position: absolute;
-    top: calc(3642 / 1080 * 100vh);
-    left: calc(851 / 1920 * 100vw);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
@@ -4475,9 +4422,6 @@ header {
 }
 
 .blog-single-challenges {
-    position: absolute;
-    top: calc(4376 / 1080 * 100vh);
-    left: calc(839 / 1920 * 100vw);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
@@ -4488,9 +4432,6 @@ header {
 }
 
 .blog-single-text-wrapper-24 {
-    position: absolute;
-    top: calc(5303 / 1080 * 100vh);
-    left: calc(838 / 1920 * 100vw);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
@@ -4501,22 +4442,16 @@ header {
 }
 
 .blog-single-text-wrapper-25 {
-    position: absolute;
-    top: calc(5707 / 1080 * 100vh);
-    left: calc(846 / 1920 * 100vw);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
-    font-size: calc(24 / 1920 * 100vw);
+    font-size: calc(27 / 1920 * 100vw);
     letter-spacing: 0;
     line-height: calc(48 / 1080 * 100vh);
     white-space: nowrap;
 }
 
 .blog-single-text-wrapper-26 {
-    position: absolute;
-    top: calc(6537 / 1080 * 100vh);
-    left: calc(839 / 1920 * 100vw);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
@@ -4527,9 +4462,6 @@ header {
 }
 
 .blog-single-text-wrapper-27 {
-    position: absolute;
-    top: calc(1504 / 1080 * 100vh);
-    left: calc(835 / 1920 * 100vw);
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: var(--brand-colorprimary);
@@ -4539,6 +4471,10 @@ header {
     white-space: nowrap;
 }
 
+.margin-factor-to-choose-content {
+    position: relative;
+    left: calc(20 / 1920* 100vw);
+}
 /* Blog single page End */
 
 /* About us */
